--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.2",
     "multer": "^1.4.1",
+    "sharp": "^0.28.1",
     "validator": "^13.6.0"
   },
   "devDependencies": {
